@@ -1,5 +1,20 @@
 <?php
 $language = array (
+  'group_tools:settings:fix:title' => 'Los problemen met groep toegang op',
+  'group_tools:settings:fix:missing' => 'Er zijn %d gebruikers die lid zijn van een groep maar geen toegang hebben tot de content die gedeeld wordt met de groep.',
+  'group_tools:settings:fix:excess' => 'Er zijn %d gebruikers dit toegang hebben tot content van een groep waar ze geen lid meer van zijn.',
+  'group_tools:settings:fix:without' => 'Er zijn %d groepen die niet de mogelijkheid hebben om content te delen met de leden.',
+  'group_tools:settings:fix:all:description' => 'Los alle bovenstaande problemen op.',
+  'group_tools:settings:fix_it' => 'Los dit op',
+  'group_tools:settings:fix:all' => 'Los alles op',
+  'group_tools:settings:fix:nothing' => 'Er zijn geen problemen gevonden met de groepen op je site!',
+  'group_tools:action:fix_acl:error:input' => 'Ongeldige optie, je kunt %s niet oplossen',
+  'group_tools:action:fix_acl:error:missing:nothing' => 'Er zijn geen ontbrekende gebruikers gevonden in de groep ACLs',
+  'group_tools:action:fix_acl:error:excess:nothing' => 'Er zijn geen ongeldige gebruikers gevonden in de groep ACLs',
+  'group_tools:action:fix_acl:error:without:nothing' => 'Er zijn geen groepen gevonden zonder ACL',
+  'group_tools:action:fix_acl:success:missing' => 'Er zijn %d gebruikers toegevoegd aan de groep ACLs',
+  'group_tools:action:fix_acl:success:excess' => 'Er zijn %d gebruikers verwijderd uit de groep ACLs',
+  'group_tools:action:fix_acl:success:without' => 'Er zijn %d groep ACLs aangemaakt',
   'group_tools:action:groups:decline_email_invitation:error:delete' => 'Er is een fout opgetreden tijdens het verwijderen van de uitnodiging',
   'widgets:index_group:filter:field' => 'Filter de groepen obv een profielveld',
   'widgets:index_group:filter:value' => 'met de waarde',
