@@ -2,6 +2,7 @@
 x.x:
 
 - added: auto join groups based on email invitation when joining the site
+- added: different group ACL fixes
 - changed: auto notifications now listen to $NOTIFICATION_HANDLERS
 - changed: handling of invitations page
 - changed: layout of actions
